@@ -1,18 +1,3 @@
-// lazy val osgiLibraryBundle  = taskKey[File](
-//   "Create a library OSGi bundle (it does not have a classpath, only includes jars)"
-// )
-// lazy val karafDirectory     = settingKey[File]("Karaf directory")
-// lazy val deployToKaraf      = taskKey[File]("Deploy to karaf")
-// enablePlugins(SbtOsgi)
-// lazy val deployOsgiSettings = osgiSettings ++ Seq(
-//   deployToKaraf     := {
-//     val bundle = OsgiKeys.bundle.value
-//     val karaf  = karafDirectory.value
-//     IO.copyFile(bundle, karaf / bundle.getName)
-//     karaf / bundle.getName
-//   },
-//   publishMavenStyle := false
-// )
 
 inThisBuild {
   Seq(
@@ -25,7 +10,6 @@ inThisBuild {
       "future-migration",
       "-rewrite"
     )
-    // karafDirectory   := baseDirectory.value / ".." / "deploy" / "deploy"
   )
 }
 
@@ -75,68 +59,90 @@ lazy val javafxSpike =
     .settings(
       osgiSettings,
       OsgiKeys.bundleSymbolicName := "com.perikov.osgi.javafx.platform",
-      OsgiKeys.exportPackage      := Seq("com.perikov.osgi.javafx.platform"),
+      OsgiKeys.exportPackage      := Seq(
+        "com.perikov.osgi.javafx.platform;version=0.1.1-SNAPSHOT"
+      ),
       OsgiKeys.importPackage      := Seq(
         "scala;scala.**;version=\"[3.2,4.0)\"",
+        "cats.effect;cats.effect.**;version=\"[3.4,4.0)\"",
         "*"
       ),
+      Compile / packageBin / packageOptions += Package.ManifestAttributes(
+        "Meta-Persistence" -> "OSGI-INF/persistence.xml"
+      ),
       libraryDependencies ++= Seq(
-        "org.osgi"    % "org.osgi.service.component"             % "1.4.0",
-        "org.osgi"    % "org.osgi.service.component.annotations" % "1.4.0",
-        "org.osgi"    % "org.osgi.core"                          % "6.0.0",
-        "org.osgi"    % "org.osgi.service.log"                   % "1.4.0",
-        "org.openjfx" % "javafx-controls"                        % "20.0.1"
+        "org.osgi"             % "org.osgi.service.component"             % "1.4.0",
+        "org.osgi"             % "org.osgi.annotation.versioning"         % "1.1.2",
+        "org.osgi"             % "org.osgi.service.component.annotations" % "1.4.0",
+        "org.osgi"             % "org.osgi.core"                          % "6.0.0",
+        "org.osgi"             % "org.osgi.service.log"                   % "1.4.0",
+        "org.osgi"             % "org.osgi.service.jpa"                   % "1.1.0",
+        "org.apache.aries.jpa" % "org.apache.aries.jpa.api"               % "2.7.3",
+        "org.openjfx"          % "javafx-controls"                        % "20.0.1",
+        "org.typelevel"       %% "cats-effect"                            % "3.4.6",
+        "javax.persistence"    % "javax.persistence-api"                  % "2.2"
       )
     )
 
-lazy val javafxSpikeClient = 
-  project
-    .in(file("spike-javafx-client"))
-    .dependsOn(javafxSpike)
-    .enablePlugins(SbtOsgi)
-    .settings(
-      osgiSettings,
-      OsgiKeys.bundleSymbolicName := "com.perikov.osgi.javafx.client",
-      OsgiKeys.importPackage      := Seq(
-        "scala;scala.**;version=\"[3.2,4.0)\"",
-        "*"
-      ),
-      libraryDependencies ++= Seq(
-        "org.osgi"    % "org.osgi.service.component"             % "1.4.0",
-        "org.osgi"    % "org.osgi.service.component.annotations" % "1.4.0",
-        "org.osgi"    % "org.osgi.core"                          % "6.0.0",
-        "org.osgi"    % "org.osgi.service.log"                   % "1.4.0",
-        "org.openjfx" % "javafx-controls"                        % "20.0.1"
-      )
+lazy val javafxSpikeClient = myProj("javafxSpikeClient", "spike-javafx-client")
+  .dependsOn(javafxSpike)
+  .settings(
+    libraryDependencies += "org.openjfx" % "javafx-controls" % "20.0.1"
+  )
+
+lazy val persistenceSpike = myProj("persistenceSpike", "spike-persistence")
+  .settings(
+    libraryDependencies ++= Seq(
+      "org.typelevel"    %% "cats-effect"           % "3.5.0",
+      "javax.persistence" % "javax.persistence-api" % "2.2"
     )
-lazy val camelSpike =
-  project
-    .in(file("spike-camel"))
-    .enablePlugins(SbtOsgi)
-    .settings(
-      autoScalaLibrary            := true,
-      osgiSettings,
-      OsgiKeys.bundleSymbolicName := "com.perikov.osgi.spike.camel",
-      OsgiKeys.importPackage      := Seq(
-        "scala;scala.**;version=\"[3.2,4.0)\"",
-        "cats.effect**;version=\"[3.4,4)\"",
-        "cats;cats.syntax;version=\"[2.9,3.0)\"",
-        "*"
-      ),
-      libraryDependencies ++= Seq(
-        "org.osgi"       % "org.osgi.service.component"             % "1.4.0",
-        "org.osgi"       % "org.osgi.service.component.annotations" % "1.4.0",
-        "org.osgi"       % "org.osgi.core"                          % "6.0.0",
-        "org.osgi"       % "org.osgi.service.log"                   % "1.4.0",
-        "org.typelevel" %% "log4cats-core"                          % "2.6.0",
-        "org.typelevel" %% "cats-effect"                            % "3.4.6",
-        "org.openjfx"    % "javafx-controls"                        % "20.0.1"
-      )
+  )
+
+lazy val cleanSpike = myProj("cleanSpike", "spike-clean")
+  .settings(
+    libraryDependencies ++= Seq(
+      "org.typelevel" %% "cats-effect" % "3.5.0"
     )
-lazy val root       =
+  )
+
+lazy val javafxApp = myProj("javafx-app1", "javafx-app1")
+  .settings(
+    fork := true,
+    javaOptions ++=Seq("-XX:MaxGCPauseMillis=2", "-XX:+UseZGC"),
+    libraryDependencies ++= Seq(
+      "org.openjfx" % "javafx-fxml" % "20.0.1",
+      "org.openjfx" % "javafx-controls" % "20.0.1",
+      "io.github.mkpaz" % "atlantafx-base" % "1.2.0",
+
+      "org.typelevel" %% "cats-effect" % "3.5.0"
+
+    )
+  )
+
+lazy val root =
   project
     .in(file("."))
     .enablePlugins(SbtOsgi)
     .settings(
       osgiSettings
+    )
+    .aggregate(javafxSpike, javafxSpikeClient)
+
+def myProj(name: String, base: String) =
+  sbt
+    .Project(name, file(base))
+    .enablePlugins(SbtOsgi)
+    .settings(
+      osgiSettings,
+      OsgiKeys.bundleSymbolicName := s"com.perikov.osgi.$name",
+      OsgiKeys.importPackage := Seq(
+        "scala;scala.**;version=\"[3.2,4.0)\"",
+        "*"
+      ),
+      libraryDependencies ++= Seq(
+        "org.osgi" % "org.osgi.service.component"             % "1.4.0",
+        "org.osgi" % "org.osgi.service.component.annotations" % "1.4.0",
+        "org.osgi" % "org.osgi.core"                          % "6.0.0",
+        "org.osgi" % "org.osgi.service.log"                   % "1.4.0"
+      )
     )
